修改設置參數
